--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>yəhaw̓ Map Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
 
   <div id="yehaw-event-map-wrapper"></div>
 
-  <script src="script/locations.js"></script>
+  <script src="script/events.js"></script>
   <script src="script/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChAb55JoNiptXsKfWGelf4hjFR5JW0C_s&callback=initYehawMap" async defer></script>
 
