Switched to full screen version, added all events

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>yəhaw̓ Map Demo</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>yəhaw̓ Map Demo</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
 
-  <div id="yehaw-event-map-wrapper"></div>
+  <div id="yehaw-event-map-wrapper">
+    <div id="yehaw-event-map"></div>
+    <ul id="yehaw-event-list"></ul>
+  </div>
 
   <script src="script/events.js"></script>
   <script src="script/main.js"></script>
