--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
 
-  <div id="yehaw-event-map-wrapper">
-    <div id="yehaw-event-map"></div>
-    <ul id="yehaw-event-list"></ul>
+  <div id="map-wrapper">
+    <div id="map"></div>
+    <ul id="event-list"></ul>
   </div>
 
+  <script src="script/moment.min.js"></script>
   <script src="script/events.js"></script>
   <script src="script/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChAb55JoNiptXsKfWGelf4hjFR5JW0C_s&callback=initYehawMap" async defer></script>
