--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <script src="script/moment.min.js"></script>
   <script src="script/events.js"></script>
+  <script src="script/map-style.js"></script>
   <script src="script/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChAb55JoNiptXsKfWGelf4hjFR5JW0C_s&callback=initYehawMap" async defer></script>
 
