Added date filter input

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       </li>
       <li>
         <label for="filter-date">Date</label>
-        <select id="filter-date">
-        </select>
+        <input id="filter-date" type="date">
       </li>
       <li>
         <label for="filter-invited">Invited</label>
