Added 'All' options to drop-down lists

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
       <li>
         <label for="filter-artist">Artist</label>
         <select id="filter-artist">
+          <option>All</option>
         </select>
       </li>
       <li>
         <label for="filter-location">Location</label>
         <select id="filter-location">
+          <option>All</option>
         </select>
       </li>
       <li>
         <label for="filter-event-type">Event Type</label>
         <select id="filter-event-type">
+          <option>All</option>
         </select>
       </li>
       <li>
@@ -35,6 +38,7 @@
       <li>
         <label for="filter-invited">Invited</label>
         <select id="filter-invited">
+          <option>All</option>
           <option>Indigenous</option>
           <option>Non-Indigenous</option>
         </select>
