Displayed a message when there are no events

--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
     </div>
 
     <div id="event-wrapper" class="map-menu">
+
+      <p id="no-events-message">
+        No events are displayed. Please update the <strong>filters</strong>
+        to display more events.
+      </p>
+
       <ul id="event-list" class="map-menu-list"></ul>
+
     </div>
 
     <div id="map"></div>
