Added ability to open/close menus

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <div class="map-menu-controls">
       <button id="events-menu-control" class="map-menu-control"><span>Events List</span></button>
-      <button id="filter-menu-control" class="map-menu-control open"><span>Filters</span></button>
+      <button id="filter-menu-control" class="map-menu-control"><span>Filters</span></button>
     </div>
 
-    <div id="filter-wrapper" class="map-menu open">
+    <div id="filter-wrapper" class="map-menu">
       <ul id="filter-list" class="map-menu-list">
         <li>
           <label for="filter-artist">Artist</label>
