--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
           <label for="filter-date">Date</label>
           <input id="filter-date" type="date">
         </li>
+        <li>
+          <label for="filter-invited">Invited</label>
+          <select id="filter-invited">
+            <option>All</option>
+          </select>
+        </li>
       </ul>
 
     </div>
