Added 'Show Past Events' option

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
       <ul id="filter-list" class="map-menu-list">
         <li>
+          <label for="filter-past-events">
+            <input type="checkbox" id="filter-past-events" value="show-past-events">
+            Show Past Events
+          </label>
+        </li>
+        <li>
           <label for="filter-artist">Artist</label>
           <select id="filter-artist">
             <option>All</option>
